--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
 <link rel="manifest" href="/docs/5.2/assets/img/favicons/manifest.json">
 <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-<link rel="icon" href="C:\Users\BLUEAVES\Desktop\logo.png">
+<link rel="icon" href="https://github.com/BabaMaajid/dem_chat/blob/master/logo.png">
 <meta name="theme-color" content="#712cf9">
     <style>
       .bd-placeholder-img {
